--- a/html/login.html
+++ b/html/login.html
@@ -145,7 +145,7 @@
 
                 if (response.ok) {
                     localStorage.setItem('usuario', JSON.stringify(data));
-                    localStorage.setItem('token', data.token);
+                    localStorage.setItem('authToken', data.token);
                     localStorage.setItem('nome', data.nome);
                     mensagemDiv.innerHTML = `<div class="alert alert-success">${data.message || 'Login realizado com sucesso!'}</div>`;
                     window.location.href = 'index.html';
