--- a/html/index.html
+++ b/html/index.html
@@ -160,14 +160,27 @@
 
 
     <script>
+        let tipoUsuarioRaw = localStorage.getItem('usuario');
+        let tipoUsuario = JSON.parse(tipoUsuarioRaw)?.usuario?.tipo;
+
+        function getAuthHeaders() {
+            const token = localStorage.getItem('authToken');
+            return token ? { Authorization: `Bearer ${token}` } : {};
+        }
+
         async function atualizarListaDeProdutos() {
+            const token = localStorage.getItem('token');
+
             try {
                 const response = await fetch('http://localhost:5000/listarprodutos', {
-                    method: 'GET',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    }
+                    headers: getAuthHeaders()
                 });
+
+                // if (response.status === 401) {
+                //     window.location = 'login.html';
+                //     return;
+                // }
+
                 const produtos = await response.json();
 
                 const container = document.getElementById('produtosContainer');
@@ -178,14 +191,15 @@
                     card.classList.add('col-12', 'col-sm-6', 'col-lg-6', 'mb-4');
                     card.innerHTML = `
                         <div class="card h-100 shadow-sm position-relative">
-                            <div class="position-absolute top-0 end-0 m-2 d-flex gap-2">
-                                <i class="bi bi-pencil-square text-primary" role="button"
-                                onclick="abrirModalEdicao(${produto.id}, '${produto.nome}', '${produto.descricao}', ${produto.preco})"
-                                title="Editar Produto"></i>
-                                <i class="bi bi-trash text-danger" role="button"
-                                onclick="confirmarExclusaoProduto(${produto.id})"
-                                title="Excluir Produto"></i>
-                            </div>
+                            ${tipoUsuario !== 'comprador' ? `
+                                <div class="position-absolute top-0 end-0 m-2 d-flex gap-2">
+                                    <i class="bi bi-pencil-square text-primary" role="button"
+                                        onclick="abrirModalEdicao(${produto.id}, '${produto.nome}', '${produto.descricao}', ${produto.preco})"
+                                        title="Editar Produto"></i>
+                                    <i class="bi bi-trash text-danger" role="button"
+                                        onclick="confirmarExclusaoProduto(${produto.id})"
+                                        title="Excluir Produto"></i>
+                                </div>` : ''}
                             <img src="${produto.imagem_url}" class="card-img-top" alt="Produto">
                             <div class="card-body d-flex flex-column">
                                 <h5 class="card-title">${produto.nome}</h5>
@@ -195,9 +209,9 @@
                             </div>
                         </div>
                     `;
-
                     container.appendChild(card);
                 });
+
             } catch (error) {
                 console.error('Erro ao carregar produtos:', error);
             }
@@ -220,7 +234,8 @@
                 const response = await fetch(`http://localhost:5000/deletarproduto/${id}`, {
                     method: 'DELETE',
                     headers: {
-                        'Content-Type': 'application/json'
+                        'Content-Type': 'application/json',
+                        ...getAuthHeaders()
                     }
                 });
 
@@ -247,7 +262,8 @@
                 const response = await fetch(`http://localhost:5000/atualizarproduto/${id}`, {
                     method: 'PUT',
                     headers: {
-                        'Content-Type': 'application/json'
+                        'Content-Type': 'application/json',
+                        ...getAuthHeaders()
                     },
                     body: JSON.stringify({ nome, descricao, preco })
                 });
