--- a/html/cadastroProduto.html
+++ b/html/cadastroProduto.html
@@ -124,8 +124,25 @@
             </div>
 
             <div class="mb-4">
-                <label for="dataHora" class="form-label">Data e Hora de Produção</label>
-                <input type="datetime-local" class="form-control" id="dataHora" required>
+                <label for="dataHora" class="form-label">Data de Vencimento</label>
+                <input type="date" class="form-control" id="dataHora" required>
+            </div>
+
+            <div class="mb-3">
+                <label for="quantidade" class="form-label">Quantidade</label>
+                <input type="number" class="form-control" id="quantidade" min="1" value="1" required>
+            </div>
+
+            <div class="mb-3">
+                <label for="tipoProduto" class="form-label">Tipo de Produto</label>
+                <select class="form-select" id="tipoProduto" required>
+                    <option value="">Selecione um tipo</option>
+                </select>
+            </div>
+
+            <div class="mb-3">
+                <label for="imagem" class="form-label">Imagem do Produto</label>
+                <input type="file" class="form-control" id="imagem" accept="image/*" required>
             </div>
 
             <div class="d-grid">
@@ -137,6 +154,12 @@
     </div>
 
     <script>
+
+        function getAuthHeaders() {
+            const token = localStorage.getItem('authToken');
+            return token ? { Authorization: `Bearer ${token}` } : {};
+        }
+
         function preencherPerfil() {
             const usuario = localStorage.getItem('usuario');
             if (usuario) {
@@ -169,25 +192,30 @@
             const descricao = document.getElementById('descricao').value.trim();
             const numero = document.getElementById('numero').value.trim();
             const dataHora = document.getElementById('dataHora').value;
+            const imagem = document.getElementById('imagem').files[0];
+            const quantidade = document.getElementById('quantidade').value;
+            const tipoProdutoId = document.getElementById('tipoProduto').value;
 
             const preco = precoInput.toLowerCase() === 'grátis' ? 0 : parseFloat(precoInput.replace(',', '.'));
 
-            const payload = {
-                nome,
-                estabelecimento,
-                preco,
-                descricao,
-                whatsapp: numero,
-                data_producao: dataHora
-            };
+            const formData = new FormData();
+            formData.append('nome', nome);
+            formData.append('estabelecimento', estabelecimento);
+            formData.append('preco', preco);
+            formData.append('descricao', descricao);
+            formData.append('whatsapp', numero);
+            formData.append('data_vencimento', dataHora);
+            formData.append('imagem', imagem);
+            formData.append('quantidade', quantidade);
+            formData.append('fk_tipo_produto_id', tipoProdutoId);
 
             try {
                 const resposta = await fetch('http://localhost:5000/adicionarproduto', {
                     method: 'POST',
                     headers: {
-                        'Content-Type': 'application/json'
+                        ...getAuthHeaders()
                     },
-                    body: JSON.stringify(payload)
+                    body: formData
                 });
 
                 if (resposta.ok) {
@@ -202,6 +230,33 @@
                 alert('Erro de conexão com o servidor.');
             }
         }
+
+        async function carregarTiposDeProduto() {
+            try {
+                const resposta = await fetch('http://localhost:5000/tiposproduto', {
+                    headers: getAuthHeaders()
+                });
+
+                if (!resposta.ok) {
+                    throw new Error('Erro ao buscar tipos');
+                }
+
+                const tipos = await resposta.json();
+                const select = document.getElementById('tipoProduto');
+
+                tipos.forEach(tp => {
+                    const option = document.createElement('option');
+                    option.value = tp.id;
+                    option.textContent = tp.nome;
+                    select.appendChild(option);
+                });
+            } catch (erro) {
+                console.error('Erro ao carregar tipos de produto:', erro);
+            }
+        }
+
+        carregarTiposDeProduto();
+
 
         document.getElementById('produtoForm').addEventListener('submit', cadastrarProduto);
         document.addEventListener('DOMContentLoaded', preencherPerfil);
