--- a/html/index.html
+++ b/html/index.html
@@ -53,7 +53,7 @@
                     <li class="nav-item"><a href="../html/quemSomos.html" class="nav-link text-white">Quem Somos?</a>
                     </li>
                     <li class="nav-item"><a href="contato.html" class="nav-link text-white">Contato</a></li>
-                    <li class="nav-item"><a href="login.html" class="nav-link text-white">Login</a></li>
+                    <li class="nav-item" id="usuarioNav"></li>
                 </ul>
             </div>
         </div>
@@ -216,7 +216,30 @@
             try {
                 const r = await fetch(`${BASE}/listarprodutos`, { headers: auth() });
                 cards.replaceChildren(...(await r.json()).map(card));
-            } catch (e) { console.error(e) }
+
+                const nav = document.getElementById('usuarioNav');
+                const raw = localStorage.getItem('usuario');
+
+                if (raw) {
+                    try {
+                        const user = JSON.parse(raw)?.usuario;
+                        if (user?.nome) {
+                            nav.innerHTML = `
+                                <a href="perfil.html" class="nav-link text-white d-flex align-items-center">
+                                    <i class="bi bi-person-circle me-1"></i> ${user.nome}
+                                </a>
+                            `;
+                            return;
+                        }
+                    } catch (e) {
+                        console.warn('Erro ao ler usuário:', e);
+                    }
+                }
+
+                nav.innerHTML = `<a href="login.html" class="nav-link text-white">Login</a>`;
+            } catch (e) {
+                console.error(e)
+            }
         }
 
         function toggleGratis(checkbox, input) {
