--- a/html/perfil.html
+++ b/html/perfil.html
@@ -37,6 +37,11 @@
                     </li>
                     <li class="nav-item"><a href="contato.html" class="nav-link text-white">Contato</a></li>
                     <li class="nav-item" id="usuarioNav"></li>
+                    <li class="nav-item" id="btn-favoritos">
+                        <a href="favoritos.html" class="nav-link text-white d-flex align-items-center">
+                            <i class="bi bi-heart-fill me-1"></i> Favoritos
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -214,7 +219,7 @@
 
                 if (r.ok) {
                     bootstrap.Modal.getInstance('#modalEditar').hide();
-                    await loadPerfil(); 
+                    await loadPerfil();
                     alert('Perfil atualizado!');
                 } else {
                     const { message } = await r.json();
