fazendo crud de carrinho de compras

--- a/html/favoritos.html
+++ b/html/favoritos.html
@@ -55,9 +55,9 @@
                     <li class="nav-item"><a href="quemSomos.html" class="nav-link text-white">Quem Somos?</a></li>
                     <li class="nav-item"><a href="contato.html" class="nav-link text-white">Contato</a></li>
                     <li class="nav-item" id="usuarioNav"></li>
-                    <li class="nav-item">
-                        <a href="favoritos.html" class="nav-link text-white d-flex align-items-center active">
-                            <i class="bi bi-heart-fill me-1"></i> Favoritos
+                    <li class="nav-item" id="btn-favoritos">
+                        <a href="carrinho.html" class="nav-link text-white d-flex align-items-center">
+                            <i class="bi bi-cart-fill me-1"></i> Carrinho de Compras
                         </a>
                     </li>
                 </ul>
