--- a/html/quemSomos.html
+++ b/html/quemSomos.html
@@ -58,8 +58,15 @@
                     <li class="nav-item">
                         <a href="contato.html" class="nav-link text-white">Contato</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="login.html" class="nav-link text-white">Login</a>
+                    <li class="nav-item" id="btn-favoritos">
+                        <a href="favoritos.html" class="nav-link text-white d-flex align-items-center">
+                            <i class="bi bi-heart-fill me-1"></i> Favoritos
+                        </a>
+                    </li>
+                    <li class="nav-item" id="btn-favoritos">
+                        <a href="carrinho.html" class="nav-link text-white d-flex align-items-center">
+                            <i class="bi bi-cart-fill me-1"></i> Carrinho de Compras
+                        </a>
                     </li>
                 </ul>
             </div>
