consertando não estava trazendo imagem

--- a/html/favoritos.html
+++ b/html/favoritos.html
@@ -120,7 +120,7 @@
             col.innerHTML = `
                 <div class="card h-100 shadow-sm position-relative">
                     <div class="ratio ratio-16x9">
-                        <img class="card-img-top" src="${prod.imagem_url || 'https://via.placeholder.com/400x225?text=Produto'}" alt="Imagem do produto ${prod.nome}">
+                        <img class="card-img-top" src="${prod.imagem_url}" alt="Imagem do produto ${prod.nome}">
                     </div>
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">${prod.nome}</h5>
