--- a/html/index.html
+++ b/html/index.html
@@ -241,7 +241,7 @@
                 <div class="card h-100 shadow-sm position-relative">
                     <div class="ratio ratio-16x9">
                         <img class="card-img-top" style="object-fit:cover" 
-                            src="${prod.imagem_url || 'https://via.placeholder.com/400x225?text=Produto'}"
+                            src="${prod.imagem_url}"
                             alt="Imagem do produto ${prod.nome}">
                     </div>
                     <div class="card-body d-flex flex-column">
