--- a/html/carrinho.html
+++ b/html/carrinho.html
@@ -154,7 +154,7 @@
             col.innerHTML = `
                 <div class="card h-100 shadow-sm">
                     <div class="ratio ratio-16x9">
-                        <img class="card-img-top" src="${item.imagem || 'https://via.placeholder.com/400x225?text=Produto'}" alt="${item.nome}">
+                        <img class="card-img-top" src="${item.imagem_url}" alt="${item.nome}">
                     </div>
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">${item.nome}</h5>
