--- a/html/cadastroUsuario.html
+++ b/html/cadastroUsuario.html
@@ -237,7 +237,7 @@
             const telefone = document.getElementById('telefone').value;
             const horario = document.getElementById('horario').value;
 
-            const response = await fetch('http://localhost:5000/criarconta', {
+            const response = await fetch('https://api-projeto-integrador-v2.onrender.com/criarconta', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({
