--- a/html/carrinho.html
+++ b/html/carrinho.html
@@ -96,7 +96,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        const BASE = 'http://localhost:5000';
+        const BASE = 'https://api-projeto-integrador-v2.onrender.com';
         const toast = new bootstrap.Toast(document.getElementById('toastMensagem'));
         const cards = document.getElementById('carrinhoContainer');
         const totalGeralEl = document.getElementById('totalGeral');
