--- a/html/index.html
+++ b/html/index.html
@@ -173,7 +173,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        const BASE = 'http://localhost:5000';
+        const BASE = 'https://api-projeto-integrador-v2.onrender.com';
         const cards = document.getElementById('produtosContainer');
         const toast = new bootstrap.Toast(document.getElementById('toastMensagem'));
 
@@ -323,6 +323,12 @@
                         }
                     } catch (e) {
                         console.warn('Erro ao ler usuário:', e);
+
+                        nav.innerHTML = `
+                                <a href="perfil.html" class="nav-link text-white d-flex align-items-center">
+                                    <i class="bi bi-person-circle me-1"></i> ${user.nome}
+                                </a>
+                            `;
                     }
                 } else {
                     nav.innerHTML = `
