--- a/html/login.html
+++ b/html/login.html
@@ -134,7 +134,7 @@
             const senha = document.getElementById('senha').value;
 
             try {
-                const response = await fetch('http://localhost:5000/login', {
+                const response = await fetch('https://api-projeto-integrador-v2.onrender.com/login', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ email, senha }),
