--- a/html/perfil.html
+++ b/html/perfil.html
@@ -148,7 +148,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        const BASE = 'http://localhost:5000';
+        const BASE = 'https://api-projeto-integrador-v2.onrender.com';
         let dadosPerfil = {};
 
         async function loadPerfil() {
