--- a/html/perfil.html
+++ b/html/perfil.html
@@ -42,6 +42,11 @@
                             <i class="bi bi-heart-fill me-1"></i> Favoritos
                         </a>
                     </li>
+                    <li class="nav-item" id="btn-favoritos">
+                        <a href="carrinho.html" class="nav-link text-white d-flex align-items-center">
+                            <i class="bi bi-cart-fill me-1"></i> Carrinho de Compras
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
