--- a/html/index.html
+++ b/html/index.html
@@ -255,6 +255,29 @@
         </div>
     </div>
 
+    <div class="modal fade" id="modalConfirmarExclusao" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content border-0">
+                <div class="modal-header bg-danger text-white">
+                    <h5 class="modal-title">
+                        <i class="bi bi-trash3 me-2"></i> Confirmar exclusão
+                    </h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+                </div>
+
+                <div class="modal-body">
+                    Tem certeza de que deseja excluir este produto?
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Cancelar</button>
+
+                    <button id="btn-excluir-confirmar" type="button" class="btn btn-danger">Sim, excluir</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         const BASE = 'https://api-projeto-integrador-v2.onrender.com';
@@ -318,6 +341,43 @@
                 });
         }
 
+        let idParaExcluir = null;
+        const modalExclusao = new bootstrap.Modal(
+            document.getElementById('modalConfirmarExclusao')
+        );
+
+        function solicitarExclusao(id) {
+            idParaExcluir = id;
+            modalExclusao.show();
+        }
+
+
+        document
+            .getElementById('btn-excluir-confirmar')
+            .addEventListener('click', async () => {
+                if (!idParaExcluir) return;
+
+                try {
+                    const r = await fetch(`${BASE}/deletarproduto/${idParaExcluir}`, {
+                        method: 'DELETE',
+                        headers: auth()
+                    });
+
+                    if (r.ok) {
+                        showToast('Produto excluído!');
+                        load();
+                    } else {
+                        showToast('Erro ao excluir.', 'danger');
+                    }
+                } catch (e) {
+                    console.error(e);
+                    showToast('Erro ao excluir.', 'danger');
+                } finally {
+                    idParaExcluir = null;
+                    modalExclusao.hide();
+                }
+            });
+
         function card(prod) {
             const col = document.createElement('div');
             col.className = 'col-12 col-sm-6 col-lg-6 mb-4';
@@ -358,18 +418,19 @@
 
             if (prod.pode_editar) {
                 const btns = document.createElement('div');
-                btns.className = 'position-absolute top-0 end-0 m-2 d-flex gap-2';
+                btns.className =
+                    'position-absolute top-0 end-0 m-2 d-flex gap-2';
                 btns.innerHTML = `
                     <button class="btn btn-light btn-sm shadow-sm me-1 d-flex align-items-center justify-content-center"
                             title="Editar" style="width:36px; height:36px; border-radius:50%;">
-                        <i class="bi bi-pencil-square text-primary"></i>
+                    <i class="bi bi-pencil-square text-primary"></i>
                     </button>
                     <button class="btn btn-light btn-sm shadow-sm d-flex align-items-center justify-content-center"
                             title="Excluir" style="width:36px; height:36px; border-radius:50%;">
-                        <i class="bi bi-trash text-danger"></i>
+                    <i class="bi bi-trash text-danger"></i>
                     </button>`;
                 btns.children[0].onclick = () => openEdit(prod);
-                btns.children[1].onclick = () => deletarProduto(prod.id);
+                btns.children[1].onclick = () => solicitarExclusao(prod.id);
                 col.querySelector('.card').append(btns);
             }
 
